a boat load of changes related to Attributes
you will need to re-create your database.

there is still more cleanup to do, but i need to get this in now so that i
can work on finishing it up. the only editor that works is the global
editor...now i need to go back and finish up the rest of the attribute
editors, but it is easier now that i have things figured out and the code
cleaned up more.

there is tons of commented out code in the Attribute* classes...please
don't remove it yet...

i commented out some fields in intake.xml that didn't seem to be used
right now (according to the errors in the turbine.log file that i got).
john/elicia, please test and see if i screwed something up.

i added a copy of the email that Pier is sending out with bugzilla on
nagoya, it is a neato report format. eventualy it would be cool to do
something like that for scarab.

--- a/src/templates/screens/admin/AttributeEdit.vm
+++ b/src/templates/screens/admin/AttributeEdit.vm
@@ -115,7 +115,7 @@ Back to <a href="$link.setPage("admin,AttributeShow.vm")">Attribute Show</a>
      </td>
      <td><input type="text" size="25" class="text" name="$intakeOption.Name.Key" value="$intakeOption.Name"/></td>
      <td>
-        #numericSelect( $intakeOption.NumericValue.Key 1 $maxNum $intakeOption.NumericValue.Value 1 )
+        #numericSelect( $intakeOption.Weight.Key 1 $maxNum $intakeOption.Weight.Value 1 )
      </td>
     </tr>
 #end
@@ -131,12 +131,12 @@ Back to <a href="$link.setPage("admin,AttributeShow.vm")">Attribute Show</a>
      <td><input type="text" size="25" class="text" name="$intakeOption.NewName.Key" value="$intakeOption.NewName"/></td>
      <td>
 #set ( $maxNum = $maxNum + 1 )
-#if ($intakeOption.NumericValue.Value != 0)
-    #set ( $selected = $intakeOption.NumericValue.Value )
+#if ($intakeOption.Weight.Value != 0)
+    #set ( $selected = $intakeOption.Weight.Value )
 #else
     #set ( $selected = $maxNum )
 #end
-#numericSelect( $intakeOption.NumericValue.Key 1 $maxNum $selected 1 )
+#numericSelect( $intakeOption.Weight.Key 1 $maxNum $selected 1 )
      </td>
 </tr>
 
