--- a/src/templates/screens/admin/AttributeEditOptions.vm
+++ b/src/templates/screens/admin/AttributeEditOptions.vm
@@ -74,7 +74,7 @@ $page.setTitle("Attribute Editor")
       <td width="20%">          
         <div align="center">
 
-    #numericSelect( $intakeOption.NumericValue.Key 1 $maxNum $intakeOption.NumericValue.Value 1 )
+    #numericSelect( $intakeOption.Weight.Key 1 $maxNum $intakeOption.Weight.Value 1 )
 
       </div>
       </td>
@@ -123,12 +123,12 @@ $page.setTitle("Attribute Editor")
         <div align="center">
 
 #set ( $maxNum = $maxNum + 1 )
-#if ($intakeOption.NumericValue.Value != 0)
-    #set ( $selected = $intakeOption.NumericValue.Value )
+#if ($intakeOption.Weight.Value != 0)
+    #set ( $selected = $intakeOption.Weight.Value )
 #else
     #set ( $selected = $maxNum )
 #end
-#numericSelect( $intakeOption.NumericValue.Key 1 $maxNum $selected 1 )
+#numericSelect( $intakeOption.Weight.Key 1 $maxNum $selected 1 )
 
       </div>
       </td>
