--- a/src/templates/screens/Links.vm
+++ b/src/templates/screens/Links.vm
@@ -22,6 +22,9 @@ $page.setTitle("Scarab Links")
 <h3>Admin Pages</h3>
 <ul>
 <li>
+    <a href="$link.setPage("admin,GlobalAttributeShow.vm")">admin,GlobalAttributeShow.vm</a>
+</li>
+<li>
     <a href="$link.setPage("admin,AttributeShow.vm")">admin,AttributeShow.vm</a>
 </li>
 <li>
