--- a/src/templates/email/RequireApproval.vm
+++ b/src/templates/email/RequireApproval.vm
@@ -1,4 +1,6 @@
-The user $user.UserName has just submitted a project-wide query to your project $module.Name. To approve or reject it, please go to :
+The user '$user.UserName' has just submitted a project-wide query to your 
+project '$module.Name'.
 
-<$link.setPage("admin,Approval.vm")>
+To approve or reject it, please go to:
 
+<$link.setPage("admin,Approval.vm").setEncodeURLOff()>
