--- a/src/templates/email/ModifyIssue.vm
+++ b/src/templates/email/ModifyIssue.vm
@@ -1,9 +1,9 @@
-#set ($user = $scarabR.getUser($issue.ModifiedBy.toString()) )
+#set ($user = $scarabR.getUser($issue.ModifiedBy.toString()))
 
-#Issue $issue.UniqueId has just been modified by user $user.UserName
+Issue '$issue.UniqueId' has just been modified by user '$user.UserName'
 
 You can view the issue detail at the following URL:
-   <$link.setPage("ViewIssue.vm").addPathInfo("id", $issue.IssueId)>
+   <$link.setPage("ViewIssue.vm").addPathInfo("id", $issue.IssueId).setEncodeURLOff()>
 
 #if (!$activityList.isEmpty())
 
@@ -15,6 +15,6 @@ $activity.Description
 
 #end
 
-#if ( $attachment.DataAsString )Comment:  $attachment.DataAsString #end
-
-
+#if ($attachment.DataAsString)
+Comment:  $attachment.DataAsString
+#end
