updated reference to $user

--- a/src/templates/email/ModifyIssue.vm
+++ b/src/templates/email/ModifyIssue.vm
@@ -1,4 +1,4 @@
-#set ($user = $scarabR.getUser($issue.ModifiedBy.toString()))
+#set ($user = $issue.ModifiedBy)
 
 Issue '$issue.UniqueId' has just been modified by user '$user.UserName'
 
