most changes related to searching for issues based on user attributes such as assigned to.
AttributeValues can be chained together when multiple values for an attribute
exist.  This makes it easy to assign multiple attributes to an attribute but one
must be sure to check for chained av's when looping through a list.

also did some cleanup in IssueSearch so that irrelevant sql chunks are not
added when some fields are left blank.

added a Choose... option to the sortby select list, so that every list is not
sorted by summary  value by default.

Since the user selections were multivalued, i had to do some work towards
allowing it, should be straightforward to add for other option attributes as well.

Issue number:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/macros/AdvancedQueryMacro.vm
+++ b/src/templates/macros/AdvancedQueryMacro.vm
@@ -51,19 +51,16 @@
         #set ( $field = "Value" )  
   #end
 
-  #if ( !$attVal.isSet() )
-
         <tr>
          <th width="120">$attVal.Attribute.Name:</th>
 
+  ## showing user attributes in separate section
+  #if ($attVal.Attribute.AttributeType.AttributeClass.Name != "user")
+
             <td>
-    #attrValueErrorMsg ( $attVal $field )
+                #attrValueErrorMsg ( $attVal $field )
 
-    #if ($attVal.Attribute.AttributeType.AttributeClass.Name == "user")
-
-          #userSelectBox ($attVal "")
-
-    #elseif ($attVal.Attribute.AttributeType.Name == "combo-box" )
+    #if ($attVal.Attribute.AttributeType.Name == "combo-box" )
 
           #attrValueLeafSelect ($attVal $field "")
 
@@ -101,7 +98,7 @@
     	<tr>
 			<th width="120">committed by:</th>
 			<td>
-            <select name="$query.CreatedBy.Key" multiple="multiple">
+            <select name="$query.CreatedByUserNames.Key" multiple="multiple">
 
 #foreach ( $createdBy in $module.EligibleIssueReporters )
     <option value="$createdBy.UserName">$createdBy.UserName</option>
@@ -109,18 +106,29 @@
 			</select>
             </td>
 	    </tr>
-			
-		<tr>
-			<th width="120">assignee(s):</th>
-			<td>
-            <select name="$query.Assignees.Key" multiple="multiple">
 
-#foreach ( $userAssignee in $module.EligibleAssignees )
-    <option value="$userAssignee.UserName">$userAssignee.UserName</option>
-#end
-			</select>
+#foreach ( $attKey in $attrValues.sequence() )
+  #set ( $attVal = $attrValues.get($attKey) )
+  #set ( $attrInput = $intake.AttributeValue.mapTo($attVal) ) 
+
+  #if ($attVal.Attribute.AttributeType.AttributeClass.Name == "user")
+
+    #if ( $attVal.Attribute.AttributeType.ValidationKey )
+        #set ( $field = $attVal.Attribute.AttributeType.ValidationKey )
+    #else
+        #set ( $field = "UserId" )
+    #end
+
+        <tr>
+         <th width="120">$attVal.Attribute.Name:</th>
+
+            <td>
+                #attrValueErrorMsg ( $attVal $field )
+                #userSelectBox ($attVal "5" "multiple")
             </td>
 		</tr>
+  #end
+#end
 	</table>
 </div>
 
@@ -235,6 +243,7 @@
 
          <td>
          <select name="$query.InitialSortAttributeId.Key">
+            <option value="">Choose...</option>
 
 #foreach ( $attKey in $attrValues.sequence() )
   #set ( $attribute = $attrValues.get($attKey).Attribute )
