for some reason this seems like it could be null...i'm getting an error on the runbox...
<http://scarab.whichever.com:8080/scarab/servlet/scarab/attv__6optionid/null/nexttemplate/IssueList.vm/eventsubmit_dosearch/Search/searchtype/custom/resultsperpage/2/attv/__6/attv/__5/searchts/11/searchsw/null/pagenum/1/attv__5optionid/null/intake-grp/attv/intake-grp/search/curmodule/5/search/null/id/2/curmodule/5/template/ViewIssue.vm>

--- a/src/templates/macros/ViewIssueMacro.vm
+++ b/src/templates/macros/ViewIssueMacro.vm
@@ -56,7 +56,7 @@
           <td>
        #set ( $attrInput = $intake.AttributeValue.mapTo($attVal) ) 
        #if ($attVal.Attribute.AttributeType.Name == "combo-box" )
-          $attVal.AttributeOption.Name
+          $!attVal.AttributeOption.Name
        #else
           $!attrInput.Value
        #end
